--- a/frontend/src/style/components/_commit-details.scss
+++ b/frontend/src/style/components/_commit-details.scss
@@ -56,7 +56,7 @@
 
   &__gpg {
     font-size: 0.9rem;
-    color: var(--color-scale-a-2-100);
+    color: var(--color-text-muted);
 
     &-name {
       display: inline-block;
