--- a/frontend/src/style/_forms.scss
+++ b/frontend/src/style/_forms.scss
@@ -2,19 +2,19 @@
 
 input[type="text"],
 textarea {
-  border: 1px solid var(--color-scale-a-5-100);
-  background-color: var(--color-scale-a-6-75);
+  border: 1px solid var(--color-text-input-border);
+  background-color: var(--color-text-input-bg);
   padding: 0.5rem 0.75rem;
   border-radius: 0.25rem;
   margin: 0;
 
   &:focus {
-    border-color: var(--color-scale-g-5-100);
+    border-color: var(--color-text-input-border-focus);
     outline: 0;
   }
 
   &.invalid {
-    border-color: var(--color-scale-r-5-100);
+    border-color: var(--color-text-input-border-invalid);
   }
 
   &:disabled {
@@ -41,7 +41,7 @@ textarea {
     height: 1.25rem;
     width: 1.25rem;
     margin: 0 0.25rem 0.2rem 0;
-    background-color: var(--color-scale-a-5-75);
+    background-color: var(--color-checkbox-bg);
     position: relative;
     border-radius: 0.25rem;
 
@@ -61,7 +61,7 @@ textarea {
   }
 
   &:hover span {
-    background-color: var(--color-scale-a-4-75);
+    background-color: var(--color-checkbox-hover);
   }
 
   input[type="checkbox"] {
@@ -101,7 +101,7 @@ textarea {
       width: 1.25rem;
       border-radius: 50%;
       margin: 0 0.25rem 0.2rem 0;
-      background-color: var(--color-scale-a-5-75);
+      background-color: var(--color-checkbox-bg);
       position: relative;
 
       &::after {
@@ -118,7 +118,7 @@ textarea {
     }
 
     &:hover span {
-      background-color: var(--color-scale-a-4-75);
+      background-color: var(--color-checkbox-hover);
     }
 
     input[type="radio"] {
@@ -171,6 +171,7 @@ textarea {
   }
 
   ul {
+    z-index: 10000;
     visibility: hidden;
     position: absolute;
     pointer-events: none;
@@ -178,18 +179,19 @@ textarea {
     list-style: none;
     padding: 0;
     margin: 0;
+    min-width: 10rem;
     background-color: var(--color-btn-bg);
     border-top: 1px solid var(--color-btn-border);
     border-bottom-left-radius: 0.25rem;
     border-bottom-right-radius: 0.25rem;
 
     li {
-      padding: 0.25rem 0.5rem;
+      padding: 0.5rem 0.5rem;
 
       &:last-child {
         border-bottom-left-radius: 0.25rem;
         border-bottom-right-radius: 0.25rem;
-        padding-bottom: 0.33rem; // gravity
+        padding-bottom: 0.6rem; // gravity
       }
 
       &:hover,
