--- a/frontend/src/style/components/_commits.scss
+++ b/frontend/src/style/components/_commits.scss
@@ -42,7 +42,7 @@
     text-align: left;
     padding: 0.25rem 0.5rem 0.25rem 0.67rem;
     white-space: nowrap;
-    background-color: var(--color-scale-a-7-100);
+    background-color: var(--color-commitlisthead-bg);
     @include no-select;
     position: sticky;
     top: 0;
@@ -62,11 +62,11 @@
     }
 
     &:first-child {
-      border-right: 1px solid var(--color-scale-a-8-100);
+      border-right: 1px solid var(--color-commitlisthead-border);
     }
 
     &:not(:first-child) {
-      border-left: 1px solid var(--color-scale-a-8-100);
+      border-left: 1px solid var(--color-commitlisthead-border);
     }
 
     // Order z-index of columns in descending order to allow resizer to z-index correctly.
