--- a/frontend/src/style/components/_make-commit.scss
+++ b/frontend/src/style/components/_make-commit.scss
@@ -1,12 +1,12 @@
 .make-commit {
-  --color-btn-bg: var(--color-scale-g-6-100);
-  --color-btn-bg-hover: var(--color-scale-g-5-100);
-  --color-btn-bg-disabled: var(--color-scale-g-8-100);
+  --color-btn-bg: var(--color-make-commit-bg);
+  --color-btn-bg-hover: var(--color-make-commit-bg-hover);
+  --color-btn-bg-disabled: var(--color-make-commit-bg-disabled);
 
   &.detached {
-    --color-btn-bg: var(--color-scale-r-8-100);
-    --color-btn-bg-hover: var(--color-scale-r-4-100);
-    --color-btn-bg-disabled: var(--color-scale-r-8-75);
+    --color-btn-bg: var(--color-make-commit-detached-bg);
+    --color-btn-bg-hover: var(--color-make-commit-detached-bg-hover);
+    --color-btn-bg-disabled: var(--color-make-commit-detached-bg-disabled);
   }
 
   border-top: 1px solid var(--color-changes-sep);
