--- a/frontend/src/style/components/_settings.scss
+++ b/frontend/src/style/components/_settings.scss
@@ -84,19 +84,19 @@
 
   &__option {
     flex: 1;
-    border: 0.25rem solid var(--color-scale-a-7-100);
+    border: 0.25rem solid var(--color-btn-border);
     border-radius: 0;
 
     &:hover {
-      border-color: var(--color-btn-bg-hover);
+      border-color: var(--color-btn-border-hover);
     }
 
     &--active {
-      background-color: var(--color-scale-a-6-100);
-      border-color: var(--color-scale-a-5-100);
+      background-color: var(--color-btn-bg-active);
+      border-color: var(--color-btn-border-active);
 
       &:hover {
-        border-color: var(--color-scale-a-5-100);
+        border-color: var(--color-btn-border-hover);
       }
     }
   }
