--- a/frontend/src/style/modifiers/_conventional-commits.scss
+++ b/frontend/src/style/modifiers/_conventional-commits.scss
@@ -51,3 +51,57 @@
     color: var(--color-scale-r-3-100);
   }
 }
+
+[data-theme="light"] .conv-commit-label {
+  &--feat {
+    color: var(--color-scale-g-6-100);
+  }
+
+  &--fix {
+    color: var(--color-scale-o-6-100);
+  }
+
+  &--perf {
+    color: var(--color-scale-o-6-100);
+  }
+
+  &--chore {
+    color: var(--color-scale-t-6-100);
+  }
+
+  &--refactor {
+    color: var(--color-scale-p-6-100);
+  }
+
+  &--docs {
+    color: var(--color-scale-b-6-100);
+  }
+
+  &--test {
+    color: var(--color-scale-y-6-100);
+  }
+
+  &--ci {
+    color: var(--color-scale-y-6-100);
+  }
+
+  &--style {
+    color: var(--color-scale-n-6-100);
+  }
+
+  &--revert {
+    color: var(--color-scale-o2-5-100);
+  }
+
+  &--release {
+    color: var(--color-scale-l-6-100);
+  }
+
+  &--wip {
+    color: var(--color-scale-a-5-100);
+  }
+
+  &--drop {
+    color: var(--color-scale-r-4-100);
+  }
+}
