--- a/frontend/src/style/components/_changes.scss
+++ b/frontend/src/style/components/_changes.scss
@@ -6,6 +6,7 @@
   background-color: var(--color-changes-bg);
   flex: 2;
   overflow-y: auto;
+  flex-direction: column;
   @include no-select;
 
   &__header {
@@ -60,6 +61,10 @@
         margin-right: 1rem;
       }
     }
+  }
+
+  &__remaining-space {
+    flex: 1;
   }
 }
 
