--- a/frontend/src/style/_forms.scss
+++ b/frontend/src/style/_forms.scss
@@ -143,7 +143,7 @@ textarea {
 
   button {
     cursor: pointer;
-    border: none;
+    border: var(--btn-border);
     color: var(--color-text);
     fill: var(--color-text);
     background-color: var(--color-btn-bg);
