--- a/frontend/src/style/components/_commit-labels.scss
+++ b/frontend/src/style/components/_commit-labels.scss
@@ -54,13 +54,13 @@
   }
 
   &__leaf {
-    background-color: rgba(0 0 0 / 25%);
+    background-color: var(--color-ref-label-leaf-bg);
     display: flex;
     justify-content: center;
     align-items: center;
 
     & + & {
-      border-left: 1px solid rgba(255 255 255 / 10%);
+      border-left: 1px solid var(--color-ref-label-leaf-border);
     }
 
     span {
