--- a/frontend/src/style/components/_make-commit.scss
+++ b/frontend/src/style/components/_make-commit.scss
@@ -46,11 +46,16 @@
   &__button {
     .btn {
       width: 100%;
+      border: none;
       margin-top: 0.125rem;
       margin-bottom: 0.075rem;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+
+      &__arrow {
+        border-left: 1px solid rgba(255 255 255 / 25%);
+      }
     }
   }
 }
