--- a/frontend/src/style/components/_sidebar.scss
+++ b/frontend/src/style/components/_sidebar.scss
@@ -17,6 +17,10 @@
   padding-left: 1.5rem;
   border-bottom: 1px solid var(--color-btn-border);
 
+  &.active {
+    background-color: var(--color-sidebar-btn-active);
+  }
+
   &.detached {
     background-color: var(--color-scale-r-8-75) !important;
   
@@ -45,6 +49,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
     border-bottom: 1px solid var(--color-btn-border);
+
+    &.active {
+      background-color: var(--color-sidebar-btn-active);
+    }
   }
 
   .overlay {
@@ -74,6 +82,7 @@
 
     button {
       width: 100%;
+      border: none;
     }
   }
 
@@ -90,7 +99,7 @@
     justify-content: space-between;
 
     &--selected {
-      background-color: var(--color-scale-a-5-25);
+      background-color: var(--color-sidebar-dropdown-selected);
     }
   }
 
