wip: light theme

--- a/frontend/src/style/variables/_theme-dark.scss
+++ b/frontend/src/style/variables/_theme-dark.scss
@@ -189,4 +189,7 @@
 
   --color-ref-label-leaf-bg: rgba(0 0 0 / 25%);
   --color-ref-label-leaf-border: rgba(255 255 255 / 10%);
+
+  --color-help-bg: var(--color-scale-a-7-100);
+  --color-help-border: var(--color-scale-a-8-100);
 }
