--- a/frontend/src/style/components/_info.scss
+++ b/frontend/src/style/components/_info.scss
@@ -40,8 +40,8 @@
   &__text {
     display: block;
     font-size: 1rem;
-    border: 1px solid var(--color-scale-a-8-100);
-    background-color: var(--color-scale-a-7-100);
+    border: 1px solid var(--color-help-border);
+    background-color: var(--color-help-bg);
     padding: 0.75rem 1rem;
     margin: 0.75rem;
     min-width: 20rem;
