--- a/frontend/src/style/components/_modal.scss
+++ b/frontend/src/style/components/_modal.scss
@@ -24,6 +24,7 @@
     text-align: left;
     min-width: 30rem;
     max-width: 55rem;
+    box-shadow: 0.2rem 0.2rem 1rem 0.2rem rgba(0 0 0 / 20%);
   }
 
   &__heading {
