refactor: select scss

--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -32,6 +32,7 @@
 @use "components/diffs";
 @use "components/diff";
 @use "components/info";
+@use "components/select";
 
 @use "modifiers/repo-state";
 @use "modifiers/conventional-commits";
