fix: app control light theme

--- a/frontend/src/style/components/_app-control.scss
+++ b/frontend/src/style/components/_app-control.scss
@@ -71,6 +71,10 @@
   
       &:hover {
         background-color: var(--color-scale-a-6-100);
+
+        [data-theme="light"] & {
+          background-color: var(--color-scale-a-1-100);
+        }
       }
     }
   
