--- a/frontend/src/style/variables/_theme-dark.scss
+++ b/frontend/src/style/variables/_theme-dark.scss
@@ -192,4 +192,6 @@
 
   --color-help-bg: var(--color-scale-a-7-100);
   --color-help-border: var(--color-scale-a-8-100);
+
+  --color-main-branch-star: var(--color-scale-g-3-100);
 }
