--- a/frontend/src/style/variables/_theme-light.scss
+++ b/frontend/src/style/variables/_theme-light.scss
@@ -193,4 +193,6 @@
 
   --color-help-bg: var(--color-scale-a-0-100);
   --color-help-border: var(--color-scale-a-3-100);
+
+  --color-main-branch-star: var(--color-scale-g-5-100);
 }
