--- a/frontend/src/style/components/_commit-labels.scss
+++ b/frontend/src/style/components/_commit-labels.scss
@@ -11,7 +11,7 @@
   &__label {
     display: inline-flex;
     justify-content: left;
-    align-items: center;
+    align-items: stretch;
     border-left: 2px solid;
     background-color: rgba(255 0 0 / 25%);
     position: relative;
@@ -23,6 +23,7 @@
       width: 0.5rem;
       position: absolute;
       right: -0.5rem;
+      top: 50%;
       background-color: red;
     }
 
@@ -88,12 +89,13 @@
     fill: var(--color-text);
   }
 
-  &__head {
-    height: 100%;
+  &__head,
+  &__main {
     padding: 0.15rem 0.5rem 0.25rem 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
     border-left: 1px solid rgba(255 255 255 / 20%);
+    fill: var(--color-text);
   }
 }
