--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -173,3 +173,15 @@ code {
     cursor: pointer;
   }
 }
+
+.avatar {
+  display: inline-block;
+  vertical-align: middle;
+  width: 1rem;
+  height: 1rem;
+
+  img {
+    width: 100%;
+    border-radius: 50%;
+  }
+}
