--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -179,9 +179,29 @@ code {
   vertical-align: middle;
   width: 1rem;
   height: 1rem;
+  position: relative;
 
-  img {
+  &__small {
     width: 100%;
     border-radius: 50%;
+  }
+
+  &__big {
+    border-radius: 50%;
+    box-shadow: 0.2rem 0.2rem 1rem 0.2rem rgba(0 0 0 / 40%);
+  }
+
+  &__hover-box {
+    display: none;
+    z-index: 10000;
+    position: absolute;
+    top: -1.75rem;
+    left: 2rem;
+  }
+
+  &:hover {
+    .avatar__hover-box {
+      display: block;
+    }
   }
 }
