--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -167,6 +167,8 @@ code {
 }
 
 .linked-commit {
+  @include no-select;
+
   &--linkable {
     color: var(--color-links);
     text-decoration: none;
